force-app/main/default/objects/Tournament_Stat__c/Tournament_Stat__c.object-meta.xml
<CustomObject>
    <description>Holds final tournament statistics for each player.</description>
    <label>Tournament Stat</label>
    <nameField>
        <label>Tournament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tournament Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>