force-app/main/default/objects/Tournament_Stat__c/fields/At_Bats__c.field-meta.xml
<CustomField>
    <fullName>At_Bats__c</fullName>
    <description>The number of times a player has been at bat.</description>
    <label>At Bats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>