force-app/main/default/objects/Tournament_Stat__c/fields/Batting_Average__c.field-meta.xml
<CustomField>
    <fullName>Batting_Average__c</fullName>
    <description>The batting average earned.</description>
    <formula>Runs__c 
 /  At_Bats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batting Average</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>