force-app/main/default/objects/Tournament_Stat__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the contact of the team member.</description>
    <label>Member Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tournament Stats</relationshipLabel>
    <relationshipName>Tournament_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>