force-app/main/default/objects/Tournament_Stat__c/fields/Games__c.field-meta.xml
<CustomField>
    <fullName>Games__c</fullName>
    <description>The number of games a player participated in.</description>
    <label>Games</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>