force-app/main/default/objects/Tournament_Stat__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup relationship to the member object.</description>
    <label>Membership</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Tournament Stats</relationshipLabel>
    <relationshipName>Tournament_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>