force-app/main/default/objects/Tournament_Stat__c/fields/Player_Name__c.field-meta.xml
<CustomField>
    <fullName>Player_Name__c</fullName>
    <description>The name of the player</description>
    <label>Player Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>