force-app/main/default/objects/Tournament_Stat__c/fields/Put_Outs__c.field-meta.xml
<CustomField>
    <fullName>Put_Outs__c</fullName>
    <description>The number of put outs a player has earned.</description>
    <label>Put Outs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>