force-app/main/default/objects/Tournament_Stat__c/fields/Put_Outs_Per_Game__c.field-meta.xml
<CustomField>
    <fullName>Put_Outs_Per_Game__c</fullName>
    <description>Average number of put outs per game.</description>
    <formula>Put_Outs__c 
 /  Games__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Put Outs Per Game</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>