force-app/main/default/objects/Tournament_Stat__c/fields/Runs__c.field-meta.xml
<CustomField>
    <fullName>Runs__c</fullName>
    <description>The number of runs scored.</description>
    <label>Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>