force-app/main/default/objects/Tournament_Stat__c/fields/Strike_Out_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Strike_Out_Percentage__c</fullName>
    <description>The strike percentage</description>
    <formula>Strike_Outs__c 
 /  At_Bats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strike Out Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>