force-app/main/default/objects/Tournament_Stat__c/fields/Strike_Outs__c.field-meta.xml
<CustomField>
    <fullName>Strike_Outs__c</fullName>
    <description>The number of times a player strikes out.</description>
    <label>Strike Outs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>