force-app/main/default/objects/Tournament_Stat__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team to which this tournament stat is applied.</description>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Tournament Stats</relationshipLabel>
    <relationshipName>Tournament_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>