force-app/main/default/objects/Tournament_Stat__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <description>Name of the player&#39;s team.</description>
    <label>Team Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>