force-app/main/default/objects/Tournament_Stat__c/fields/Tournament__c.field-meta.xml
<CustomField>
    <fullName>Tournament__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The tournament to which this stat applies.</description>
    <label>Tournament</label>
    <referenceTo>Tournament__c</referenceTo>
    <relationshipLabel>Tournament Stats</relationshipLabel>
    <relationshipName>Tournament_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>