force-app/main/default/objects/Tournament_Stat__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The year of this tournament</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>