force-app/main/default/objects/Tournament_Stat__c/listViews/Stats.listView-meta.xml
<ListView>
    <fullName>Stats</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Team__c</columns>
    <columns>Games__c</columns>
    <columns>Batting_Average__c</columns>
    <columns>Put_Outs_Per_Game__c</columns>
    <columns>Strike_Out_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
    </filters>
    <label>Stats</label>
</ListView>