force-app/main/default/objects/Tournament_Stat__c/listViews/X2016_Stats.listView-meta.xml
<ListView>
    <fullName>X2016_Stats</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Team__c</columns>
    <columns>Games__c</columns>
    <columns>Batting_Average__c</columns>
    <columns>Put_Outs_Per_Game__c</columns>
    <columns>Strike_Out_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2016</value>
    </filters>
    <label>2016 Stats</label>
</ListView>